--- a/UVIndexNordic/UVIndexNordic/Base.lproj/Main.storyboard
+++ b/UVIndexNordic/UVIndexNordic/Base.lproj/Main.storyboard
@@ -23,12 +23,18 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Stockholm (2014-0-12-06 15:01)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0g-kl-SS7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stockholm (2014-0-12-06 15:01)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0g-kl-SS7">
                                 <rect key="frame" x="274" y="40" width="300" height="13"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="fvd-Kv-1GK"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="11"/>
+                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="13"/>
+                                <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="is moderate" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jBj-Mc-oXd">
+                                <rect key="frame" x="499" y="0.0" width="75" height="13"/>
+                                <fontDescription key="fontDescription" name="STHeitiTC-Light" family="Heiti TC" pointSize="13"/>
                                 <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -38,17 +44,20 @@
                             <constraint firstAttribute="centerX" secondItem="Aam-od-6gj" secondAttribute="centerX" id="I1R-RX-1Th"/>
                             <constraint firstItem="P0g-kl-SS7" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="20" id="LgO-X5-u7q"/>
                             <constraint firstAttribute="trailingMargin" secondItem="P0g-kl-SS7" secondAttribute="trailing" constant="10" id="Y9h-yK-fby"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="jBj-Mc-oXd" secondAttribute="trailing" constant="10" id="hzS-bo-1tB"/>
+                            <constraint firstItem="jBj-Mc-oXd" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="55" id="id7-BC-uz9"/>
                             <constraint firstAttribute="centerY" secondItem="Aam-od-6gj" secondAttribute="centerY" id="w7Y-Tw-KsV"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="infoLabel" destination="P0g-kl-SS7" id="mLh-zr-1Xe"/>
+                        <outlet property="uvIndexDescriptionLabel" destination="jBj-Mc-oXd" id="7WL-Yq-TTh"/>
                         <outlet property="uvIndexLabel" destination="Aam-od-6gj" id="THr-ir-qaw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="393" y="430.5"/>
+            <point key="canvasLocation" x="393" y="430"/>
         </scene>
     </scenes>
 </document>
