--- a/UVIndexNordic/UV Index WatchKit App/Base.lproj/Interface.storyboard
+++ b/UVIndexNordic/UV Index WatchKit App/Base.lproj/Interface.storyboard
@@ -10,10 +10,8 @@
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="UV_Index_WatchKit_App" customModuleProvider="target">
                     <items>
-                        <label height="20" alignment="center" text="City" textAlignment="left" id="yPL-W3-nRc">
-                            <fontDescription key="font" style="UICTFontTextStyleHeadline"/>
-                        </label>
-                        <label alignment="center" text="Description" textAlignment="left" id="k2a-TT-WNK">
+                        <label alignment="center" text="Error message" textAlignment="left" numberOfLines="20" id="IcJ-WG-sdT"/>
+                        <label alignment="center" text="Description" textAlignment="left" numberOfLines="3" id="k2a-TT-WNK">
                             <fontDescription key="font" style="UICTFontTextStyleCaption1"/>
                         </label>
                         <separator alignment="left" id="05F-cW-u53"/>
@@ -31,7 +29,7 @@
                         </items>
                     </menu>
                     <connections>
-                        <outlet property="cityLabel" destination="yPL-W3-nRc" id="7ai-1S-0eX"/>
+                        <outlet property="errorMessageLabel" destination="IcJ-WG-sdT" id="SQQ-uN-DXd"/>
                         <outlet property="uvIndexDescriptionLabel" destination="k2a-TT-WNK" id="1Fj-7l-8uq"/>
                         <outlet property="uvIndexLabel" destination="o20-X9-IY5" id="gu4-PA-TE4"/>
                     </connections>
